<resources>
    <string name="app_name">InsureSwift</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_clients">Clients</string>
    <string name="title_policies">Policies</string>
    <string name="title_leads">Leads</string>
    <string name="title_reports">Reports</string>
    <string name="add_new_client">Add New Client</string>
    <string name="client_profile_picture">Client profile picture</string>
    <string name="hint_client_name">Client Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_address">Address</string>
    <string name="button_save">Save</string>
    <string name="add_new_policy">Add New Policy</string>
    <string name="policy_icon">Policy Icon</string>
    <string name="expires_on">Expires:</string>
    <string name="label_assign_to_client">Assign to Client</string>
    <string name="hint_policy_type">Policy Type (e.g., Auto, Home)</string>
    <string name="hint_policy_number">Policy Number</string>
    <string name="hint_carrier">Carrier</string>
    <string name="hint_effective_date">Effective Date</string>
    <string name="hint_expiration_date">Expiration Date</string>
    <string name="hint_premium_amount">Premium Amount</string>
    <string name="button_save_policy">Save Policy</string>
    <string name="label_policy_number">Policy Number</string>
    <string name="label_client_name">Client</string>
    <string name="label_policy_type">Policy Type</string>
    <string name="hint_coverage_amount">Coverage Amount</string>
    <string name="hint_payment_frequency">Payment Frequency (e.g., Monthly)</string>
    <string name="label_carrier">Carrier</string>
    <string name="label_policy_term">Policy Term</string>
    <string name="label_premium">Premium</string>
    <string name="label_coverage">Coverage</string>
    <string name="term_dates_format">%1$s to %2$s</string>
    <string name="premium_format">%1$s / %2$s</string>
    <string name="label_status">Status</string>
    <string name="button_renew">Mark as Renewed</string>
    <string name="button_cancel">Mark as Cancelled</string>
    <string name="add_new_lead">Add New Lead</string>
    <string name="lead_icon">Lead Icon</string>
    <string name="hint_lead_name">Lead Name</string>
    <string name="hint_contact_info">Contact Info (Phone/Email)</string>
    <string name="hint_notes">Notes</string>
    <string name="button_save_lead">Save Lead</string>
    <string name="label_lead_name">Lead Name</string>
    <string name="label_contact_info">Contact Info</string>
    <string name="label_notes">Notes</string>
    <string name="label_update_status">Update Status</string>
    <string name="button_convert_to_client">Convert to Client</string>
</resources>
